remove flickering of list quotes + temporary fix for direct link page load

--- a/src/app/quotes/quote-panorama/quote-panorama.card-style.css
+++ b/src/app/quotes/quote-panorama/quote-panorama.card-style.css
@@ -18,7 +18,6 @@ div#cards figure {
   margin: 0 2px 15px;
   padding: 15px;
   padding-bottom: 10px;
-  transition: opacity .4s ease-in-out;
   display: inline-block;
   column-break-inside: avoid;
 }
@@ -46,7 +45,6 @@ div#cards small {
 div#cards small a {
   color: #666;
   text-decoration: none;
-  transition: .4s color;
 }
 
 div#cards:hover figure:not(:hover) {
